<resources>
    <string name="app_name">Pocket</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="finger_tips">验证您的生物信息</string>

    <string name="select_dialog_default_title">请选择</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

    <string name="main_page_title">最近使用</string>
    <string name="setting_page_title">设置</string>
    <string name="list_page_title">账号列表</string>
    <string name="account_add">账号添加</string>
    <string name="account_modify">账号修改</string>
    <string name="theme">主题</string>
    <string name="export_account">导出账号</string>
    <string name="export_account_details">将会导出所有账号信息</string>
    <string name="import_account">导入账号</string>
    <string name="import_account_details">从文件里导入存在的账号信息</string>
    <string name="biological_verification">生物信息验证</string>
    <string name="biological_verification_details">App将在启动时验证您的生物信息</string>
    <string name="about">关于</string>
    <string name="create_account">创建账号</string>
    <string name="account">账号</string>
    <string name="title">标题</string>
    <string name="password">密码</string>
    <string name="note">备注</string>
    <string name="tag">标签</string>
    <string name="save">保存</string>
    <string name="account_list">账号列表</string>

</resources>